plugins {
	id 'fabric-loom' version '1.14-SNAPSHOT'
	id 'maven-publish'
}

base {
	archivesName = project.archives_base_name
}

version = project.mod_version
group = project.maven_group

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.

	maven {
		name = 'GeckoLib'
		url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
		content {
			includeGroupByRegex("software\\.bernie.*")
			includeGroup("com.eliotlash.mclib")
		}
	}
	maven { url 'https://maven.blamejared.com' }
	mavenCentral()
	maven { url "https://cursemaven.com" }
	//Runtime only repositories
	maven { url "https://maven.shedaniel.me/" }
	maven { url "https://maven.terraformersmc.com/releases/" }
	maven { url "https://maven.architectury.dev/" }
	maven { url 'https://api.modrinth.com/maven' }
	maven {
		name "KosmX's maven"
		url 'https://maven.kosmx.dev/'
	}
	maven {
		name = 'Modrinth'
		url = 'https://api.modrinth.com/maven'
		content {
			includeGroup 'maven.modrinth'
		}
	}
	exclusiveContent {
		forRepository {
			maven {
				name = "Crystal Nest"
				url = "https://maven.crystalnest.it"
			}
		}
		filter {
			includeGroup "it.crystalnest"
		}
	}

	flatDir {
		dirs "libs"
	}
}

dependencies {

	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

	// Uncomment the following line to enable the deprecated Fabric API modules.
	// These are included in the Fabric API production distribution and allow you to update your mod to the latest modules at a later more convenient time.

	// modImplementation "net.fabricmc.fabric-api:fabric-api-deprecated:${project.fabric_version}"

	modImplementation("software.bernie.geckolib:geckolib-fabric-${geckolib_minecraft_version}:${geckolib_version}")

	modImplementation "maven.modrinth:attributefix:${project.attributefix_version}-fabric,${project.attributefix_minecraft_version}"

	//modImplementation "maven.modrinth:ranged-weapon-api:${project.ranged_weapon_api_version}"
	modImplementation name: "ranged_weapon_api-fabric-2.3.3+1.21.3"
	include name: "ranged_weapon_api-fabric-2.3.3+1.21.3"

	// Attributefix dependencies:
	//modImplementation "curse.maven:bookshelf-${project.bookshelf}"
	modImplementation "curse.maven:prickle-${project.prickle}"

	// Runtime
	modRuntimeOnly("me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}")
	modRuntimeOnly "maven.modrinth:jade:${project.jade}"

	// Compile time
	modCompileOnly 'curse.maven:controllable-317269:6277376'
	modCompileOnly "me.shedaniel:RoughlyEnoughItems-api-fabric:${project.rei_version}"
	modCompileOnly "me.shedaniel:RoughlyEnoughItems-default-plugin-fabric:${project.rei_version}"
	modCompileOnly "it.crystalnest:prometheus-fabric:$prometheus_minecraft_version-$prometheus_version"
	//modCompileOnly 'maven.modrinth:create-fabric:0.5.1-j-build.1631+mc1.20.1' //NB: fabric 1.21.1 version not out yet as of typing this
}

loom {
	runs {
		//
		// This adds a new gradle task that runs the datagen API: "gradlew runDatagenClient"
		//
		datagenClient {
			inherit client
			name "Data Generation"
			vmArg "-Dfabric-api.datagen"
			vmArg "-Dfabric-api.datagen.output-dir=${file("src/main/generated")}"
			vmArg "-Dfabric-api.datagen.modid=${modid}"

			runDir "build/datagen"
		}
	}
}

sourceSets {
	main {
		resources {
			srcDirs += [
					'src/main/generated'
			]
		}
	}
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand([
				"version": project.version
		])
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
	withSourcesJar()
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.archivesBaseName}"}
	}
}

// configure the maven publication
publishing {
	publications {
		mavenJava(MavenPublication) {
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}